// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CombinationGenerator in batches generates by one for given batch from beginning 1`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
    ],
    "operations": Array [],
    "priorities": Array [],
  },
}
`;

exports[`CombinationGenerator in batches generates by one for given batch from beginning 2`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
    ],
    "operations": Array [
      0,
    ],
    "priorities": Array [
      0,
    ],
  },
}
`;

exports[`CombinationGenerator in batches generates by one for given batch from beginning 3`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
    ],
    "operations": Array [
      1,
    ],
    "priorities": Array [
      0,
    ],
  },
}
`;

exports[`CombinationGenerator in batches generates by one for given batch from end 1`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      1,
      1,
    ],
    "priorities": Array [
      0,
      1,
    ],
  },
}
`;

exports[`CombinationGenerator in batches generates by one for given batch from end 2`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      1,
      1,
    ],
    "priorities": Array [
      1,
      0,
    ],
  },
}
`;

exports[`CombinationGenerator in batches generates by one for given batch from middle 1 1`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      0,
      0,
    ],
    "priorities": Array [
      0,
      1,
    ],
  },
}
`;

exports[`CombinationGenerator in batches generates by one for given batch from middle 1 2`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      0,
      0,
    ],
    "priorities": Array [
      1,
      0,
    ],
  },
}
`;

exports[`CombinationGenerator in batches generates by one for given batch from middle 1 3`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      0,
      1,
    ],
    "priorities": Array [
      0,
      1,
    ],
  },
}
`;

exports[`CombinationGenerator in batches generates by one for given batch from middle 2 1`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      0,
      1,
    ],
    "priorities": Array [
      1,
      0,
    ],
  },
}
`;

exports[`CombinationGenerator in batches generates by one for given batch from middle 2 2`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      1,
      0,
    ],
    "priorities": Array [
      0,
      1,
    ],
  },
}
`;

exports[`CombinationGenerator in batches generates by one for given batch from middle 2 3`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      1,
      0,
    ],
    "priorities": Array [
      1,
      0,
    ],
  },
}
`;

exports[`CombinationGenerator in batches generates by one for given batch which starts in the middle of number iteration and ends in the middle of the next one 1`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      1,
      0,
    ],
    "priorities": Array [
      1,
      0,
    ],
  },
}
`;

exports[`CombinationGenerator in batches generates by one for given batch which starts in the middle of number iteration and ends in the middle of the next one 2`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      1,
      1,
    ],
    "priorities": Array [
      0,
      1,
    ],
  },
}
`;

exports[`CombinationGenerator in batches generates by one for given batch which starts in the middle of number iteration and ends in the middle of the next one 3`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      1,
      1,
    ],
    "priorities": Array [
      1,
      0,
    ],
  },
}
`;

exports[`CombinationGenerator in batches generates by one for given batch which starts in the middle of number iteration and ends in the middle of the next one 4`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
      4,
    ],
    "operations": Array [
      0,
      0,
      0,
    ],
    "priorities": Array [
      0,
      1,
      2,
    ],
  },
}
`;

exports[`CombinationGenerator without batches generates by one 1`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
    ],
    "operations": Array [],
    "priorities": Array [],
  },
}
`;

exports[`CombinationGenerator without batches generates by one 2`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
    ],
    "operations": Array [
      0,
    ],
    "priorities": Array [
      0,
    ],
  },
}
`;

exports[`CombinationGenerator without batches generates by one 3`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
    ],
    "operations": Array [
      1,
    ],
    "priorities": Array [
      0,
    ],
  },
}
`;

exports[`CombinationGenerator without batches generates by one 4`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      0,
      0,
    ],
    "priorities": Array [
      0,
      1,
    ],
  },
}
`;

exports[`CombinationGenerator without batches generates by one 5`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      0,
      0,
    ],
    "priorities": Array [
      1,
      0,
    ],
  },
}
`;

exports[`CombinationGenerator without batches generates by one 6`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      0,
      1,
    ],
    "priorities": Array [
      0,
      1,
    ],
  },
}
`;

exports[`CombinationGenerator without batches generates by one 7`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      0,
      1,
    ],
    "priorities": Array [
      1,
      0,
    ],
  },
}
`;

exports[`CombinationGenerator without batches generates by one 8`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      1,
      0,
    ],
    "priorities": Array [
      0,
      1,
    ],
  },
}
`;

exports[`CombinationGenerator without batches generates by one 9`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      1,
      0,
    ],
    "priorities": Array [
      1,
      0,
    ],
  },
}
`;

exports[`CombinationGenerator without batches generates by one 10`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      1,
      1,
    ],
    "priorities": Array [
      0,
      1,
    ],
  },
}
`;

exports[`CombinationGenerator without batches generates by one 11`] = `
Object {
  "value": Object {
    "numbers": Uint8Array [
      1,
      2,
      3,
    ],
    "operations": Array [
      1,
      1,
    ],
    "priorities": Array [
      1,
      0,
    ],
  },
}
`;
